// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List: Component should render card with draft state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <FormattedMessage
            defaultMessage="Draft"
            id="dataSource.list.draft"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": Object {
                "border": "#1d1d20",
                "text": "#a6a7aa",
              },
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={true}
            >
              <Component
                customStyles={
                  Object {
                    "display": "none",
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={true}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={true}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <styled.div>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
  </styled.div>
</styled.div>
`;

exports[`List: Component should render card with error state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <FormattedMessage
            defaultMessage="Error"
            id="dataSource.list.error"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": Object {
                "border": "#1d1d20",
                "text": "#a6a7aa",
              },
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            error 1
          </styled.div>
          <styled.div
            key="1"
          >
            error2
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <styled.div>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
  </styled.div>
</styled.div>
`;

exports[`List: Component should render card with processing state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <FormattedMessage
            defaultMessage="Loading..."
            id="dataSource.list.processing"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": Object {
                "border": "#1d1d20",
                "text": "#a6a7aa",
              },
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={true}
            >
              <Component
                customStyles={
                  Object {
                    "display": "none",
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={true}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={true}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <styled.div>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
  </styled.div>
</styled.div>
`;

exports[`List: Component should render card with ready for processing state 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <FormattedMessage
            defaultMessage="Loading..."
            id="dataSource.list.processing"
            values={Object {}}
          />
        }
      >
        <H1
          customStyles={
            Object {
              "color": Object {
                "border": "#1d1d20",
                "text": "#a6a7aa",
              },
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={true}
            >
              <Component
                customStyles={
                  Object {
                    "display": "none",
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={true}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={true}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={true}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <styled.div>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
  </styled.div>
</styled.div>
`;

exports[`List: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div>
    <styled.li
      key="0"
    >
      <Component
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)>
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)>
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "marginBottom": "20px",
            }
          }
          onClick={[Function]}
        >
          name
        </H1>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span>
              Source
            </styled.span>
            <styled.span
              isLock={false}
            >
              <Component
                customStyles={
                  Object {
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span>
              Items
            </styled.span>
            <styled.span
              isLock={false}
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span>
              Fields
            </styled.span>
            <styled.span
              isLock={false}
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span>
              Filters
            </styled.span>
            <styled.span
              isLock={false}
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span>
              Views
            </styled.span>
            <styled.span
              isLock={false}
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Component>
    </styled.li>
  </styled.div>
  <styled.div>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
  </styled.div>
</styled.div>
`;

exports[`List: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/view/1",
        },
      ]
    }
  />
  <styled.div />
  <styled.div>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
    <Component
      customStyles={
        Object {
          "backgroundColor": "#1d1d20",
          "height": "60px",
        }
      }
      onClick={[Function]}
    >
      <Component />
    </Component>
  </styled.div>
</styled.div>
`;
